<resources>
    <string name="app_name">Empty2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gtime">GAME OVER</string>
    <string name="Continue">Continue</string>
    <string name="getStarted">Start</string>
    <string name="Empty">emptY2</string>
    <string name="rules">Rules</string>
    <string name="title_activity_records">Records</string>
    <string name="rec">Records:</string>
    <string name="back">back</string>
    <string name="menu_records">Records</string>
    <string name="trfps">Enable 30fps only</string>
    <string name="settings">Settings</string>
    <string name="stg1">Use SurfaceView (Can decrease perfomance)</string>
    <string name="st2">Allow only 30 fps (for SurfaceView)</string>
    <string name="multiplayer">Versus Battle</string>
    <string name="mul_res" />
    <string name="rounds_count" />
    <string name="start_game">Start Game</string>
    <string name="game_connect">Connect to the Game</string>
    <string name="hint_ipp">IP Address</string>
    <string name="hint_port">Port</string>
    <string name="hint_id">GameID (0..127)</string>
    <string name="start_multiplayer">Start Game</string>
    <string name="search_games">Search Games</string>
    <string name="stgame">Start Game</string>
    <string name="antialias">Enable AntiAliasing</string>
    <string name="bonuses">Bonuses</string>
    <string name="b1">It gives acceleration for 5 seconds</string>
    <string name="b2">It gives invulnerability for 5 seconds</string>
    <string name="b3">Passively gives a slight acceleration</string>
    <string name="b4">Passively increase your damage</string>
    <string name="b5">Passively increase fire radius</string>
    <string name="b6">It gives ultimate fire for one attack</string>
    <string name="intlvl">(the rest is understandable on an intuitive level)</string>
</resources>
