<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/intro"
    android:background="@drawable/space">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Empty"
        android:id="@+id/textView"
        android:textColor="#9efeff00"
        android:textSize="50sp"
        android:textIsSelectable="false"
        android:textStyle="bold|italic"
        android:singleLine="false"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stgame"
        android:id="@+id/button"
        android:onClick="onClick"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#ffffff"
        android:background="#3c00f4ff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:id="@+id/button"
        android:layout_weight="1"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:onClick="Versus"
        android:textColor="#ffffff"
        android:background="#3cff6200"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/button"
        android:textSize="20sp"
        android:onClick="settings"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#ffffff"
        android:background="#3c00f4ff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/button"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#ffffff"
        android:background="#3c00ff19"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="rules" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_records"
        android:id="@+id/button"
        android:textSize="20sp"
        android:nestedScrollingEnabled="false"
        android:onClick="records"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#ffffff"
        android:background="#3c00f4ff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

</LinearLayout>