<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    android:id="@+id/bonus">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/bonuses"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/intlvl"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:textSize="15sp"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3c00ff21">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/repel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:id="@+id/textView4"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3c00ff21">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:background="@drawable/haste" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:id="@+id/textView5"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3cff7000">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:background="@drawable/speed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3cff7000">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:background="@drawable/firebonus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:id="@+id/textView7"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3cff7000">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:background="@drawable/splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#3c00b5ff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:background="@drawable/reduce" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b6"
            android:id="@+id/textView9"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_margin="3dp" />
    </LinearLayout>
</LinearLayout>